import "client.comm.proto";
package client;

message test {
    optional int32  hp                 = 1;
    optional int32  mp                 = 2;
    optional uint32 prop_id            = 3;
    optional int32  prop_num           = 4;
    optional uint32 attr_id            = 5;
    optional int32  attr_num           = 6;
    optional uint32 task_id            = 7;
    optional uint32 drop_id            = 8;
    optional uint32 add_attr_id        = 9;
    optional string cfg_file           = 10;
    optional string cfg_table          = 11;
    optional string cfg_field          = 12;
    optional uint32 mount_skill_count  = 13;
    optional string lua                = 14;
	optional uint32 area_id            = 15;
	optional uint32 pet_id			   = 16;
	optional uint32 pet_exp            = 17;
	optional uint32 money              = 18;
	optional uint32 vip_lv			   = 19;
	optional uint32 month			   = 20;
	optional uint32 land_day		   = 21;
	optional uint32 raid_id			   = 22;
	optional uint32 raid_type		   = 23;
	optional uint32 once			   = 24;
	optional uint32 sub_attr_id        = 25;
	optional bool   clear_add_attr     = 26;
    optional server_head svr_head      = 1000;
}
