
package mysql;

message tb_npc_switcher{
    required uint32 id = 1;
    required string name = 2;
    required uint32 npc_id = 3;
    required uint32 trans_id = 4;
    required uint32 serial = 5;
    required string created_date = 6;
    required string last_modified_date = 7;
    required uint32 status = 8;
}
